--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 h1 a, h2 a {
-    color: #C25100;
+    color: #005d96;
     font-family: "Lobster";
 }
 body {
@@ -68,12 +68,12 @@ h4 {
 
 .btn-default,
 .btn-default:visited {
-    color: #C25100;
+    color: #005d96;
     background: none;
-    border-color: #C25100;
+    border-color: #005d96;
 }
 
 .btn-default:hover {
     color: #FFFFFF;
-    background-color: #C25100;
+    background-color: #005d96;
 }
