--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,10 +1,9 @@
 h1 a, h2 a {
-    color: #005d96;
+    color: #79b0d3;
     font-family: "Lobster";
 }
 body {
     padding-left: 15px;
-    background-color: yellow !important;
 }
 
 
