--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -3,7 +3,8 @@ h1 a, h2 a {
     font-family: "Lobster";
 }
 body {
-    padding-left: 15px;
+    padding-left: 0px;
+
 }
 
 
@@ -11,7 +12,7 @@ body {
     background-color: #005d96;
     margin-top: 0;
     margin-bottom: 40px;
-    padding: 20px 20px 20px 40px;
+    padding: 30px 30px 30px 0px;
 }
 
 .page-header h1,
@@ -19,7 +20,7 @@ body {
 .page-header h1 a:visited,
 .page-header h1 a:active {
     color: #ffffff;
-    font-size: 36pt;
+    font-size: 40pt;
     text-decoration: none;
 }
 
@@ -28,6 +29,7 @@ h2,
 h3,
 h4 {
     font-family: 'Lobster', cursive;
+    text-decoration: underline;
 }
 
 .date {
@@ -52,8 +54,22 @@ h4 {
     margin-right: 20px;
 }
 
+
+
 .post {
-    margin-bottom: 70px;
+    margin-left: 0px;
+    margin-bottom: 45px;
+    background-color: #cbdde8;
+    padding: 20px;
+    border-radius: 8px;
+
+}
+
+
+.post:hover {
+    transform: translateY(-5px); 
+    box-shadow: 0 8px 16px rgba(0,0,0,0.15); 
+    transition: all 0.3s ease; 
 }
 
 .post h2 a,
